gcc/testsuite/rust/rustc/ui/error-codes/E0045.rs
extern "Rust" { fn foo(x: u8, ...); }   // { dg-error ".E0045." "" { target *-*-* } }

fn main() {
}

